# apps/api/internal/server/routes.go
@@ -58,6 +58,7 @@ func (app *Application) Routes() http.Handler {
 
 	// user scores
 	{
+		v1.GET("/me/activity", app.getUserActivity)
 		v1.GET("/me/scores", app.getUserScores)
 		v1.GET("/me/best-score", app.getUserBestScore)
 		v1.GET("/me/percentile", app.calculateUserPercentile)
